@@ -6,3 +6,4 @@ build
 dist
 docs/_build
 *.egg-info/
+env/
