@@ -1,17 +1,17 @@
 #!/usr/bin/env python
 
-import distutils.core, os, re
+from setuptools import setup
 
 version = '0.8.dev0'
 
-distutils.core.setup(
+setup(
     name='sunburnt',
     version=version,
     description='Python interface to Solr',
     author='Toby White',
     author_email='toby@timetric.com',
     packages=['sunburnt'],
-    requires=['httplib2', 'lxml', 'pytz'],
+    install_requires=['httplib2', 'lxml', 'pytz', 'setuptools'],
     classifiers=[
         'Development Status :: 4 - Beta',
         'Intended Audience :: Developers',
